# droneTracker

./: .gitignore  CMakeLists.txt  getDependancies.sh  getDependencies.sh  serial_port.cpp  tracker  tracker.cpp
calib/: camera.yml  cameraPos.yml
